# resume_editor

./: .aider.conf.yml  .aider.model.settings.yml  .gitignore  AGENTS.md  APP_SPEC.md  ARCHITECTURE.md  CONVENTIONS.md  DOCSTRINGS.md  README.md  alembic.ini  code_route_mappings.md  code_template_mappings.md  code_test_mappings.md  coverage_generation.py  docstrings.json  docstrings.py  docstrings_parser.md  hello.py  manage.py  package-lock.json  package.json  pyproject.toml  resume_writer_docs.md  tailwind.config.js
alembic/: env.py
alembic/versions/: 17fcea02ecca_initial_schema.py  20260225_add_company_to_resumes.py  20260226_merge_heads.py  20260304_add_token_timeout.py  20260304_job_details.py  27081f99702c_add_export_settings_to_resume_model.py  3e902acf0d1d_add_is_base_job_description_and_parent_.py  6d5a3e096652_add_llm_model_name_to_user_settings.py  a1f4c822f86c_add_notes_and_introduction_to_resume_.py  d204a83ef0df_add_roles_and_user_attributes.py  e0c1a2b3d4f5_seed_initial_roles.py  e1213f020728_add_last_login_at_and_force_password_.py
docker/: Dockerfile
resume_editor/app/: __init__.py  main.py  middleware.py
resume_editor/app/api/: __init__.py  dependencies.py
resume_editor/app/core/: __init__.py  auth.py  config.py  rendering_settings.py  security.py
resume_editor/app/database/: __init__.py  database.py
resume_editor/app/llm/: models.py  orchestration.py  orchestration_analysis.py  orchestration_banner.py  orchestration_client.py  orchestration_models.py  orchestration_refinement.py  prompts.py
resume_editor/app/models/: __init__.py  resume_model.py  role.py  user.py  user_settings.py
resume_editor/app/schemas/: llm.py  user.py
resume_editor/app/templates/: create_resume.html  dashboard.html  editor.html  login.html  refine.html  settings.html
resume_editor/app/utils/: __init__.py  filename_utils.py
resume_editor/app/web/: admin.py  admin_forms.py  pages.py
resume_editor/templates/: dashboard.html  login.html  settings.html
templates/: dashboard.html
templates/admin/: layout.html  users.html
tests/: conftest.py  test_api_init.py  test_auth.py  test_certifications.py  test_config.py  test_dashboard.py  test_database.py  test_education.py  test_experience_model.py  test_main.py  test_manage.py  test_personal_model.py  test_resume_models.py  test_resume_parsing.py  test_resume_reconstruction.py  test_resume_routes.py  test_resume_serialization.py  test_resume_serialization_extend.py  test_resume_validation.py  test_security.py  test_structured_editing.py  test_user_model.py  test_user_routes.py
tests/api/: test_user_routes_settings.py
tests/api/routes/: test_admin.py  test_resume.py  test_user.py  test_user_route.py
tests/app/: test_main.py  test_middleware.py
tests/app/api/: test_dependencies.py
tests/app/core/: test_auth.py  test_rendering_settings.py  test_security.py
tests/app/database/: test_database.py  test_migration_company.py
tests/app/llm/: test_models.py  test_models_checkpoint.py  test_orchestration.py  test_orchestration_analysis.py  test_orchestration_analyze_job.py  test_orchestration_banner.py  test_orchestration_banner_generation.py  test_orchestration_checkpoint.py  test_orchestration_client.py  test_orchestration_cross_section.py  test_orchestration_introduction.py  test_orchestration_introduction_generation.py  test_orchestration_llm_init.py  test_orchestration_models.py  test_orchestration_refine_experience.py  test_orchestration_refine_generic.py  test_orchestration_refine_role.py  test_orchestration_refinement.py  test_orchestration_retry_helpers.py  test_prompts.py  (+1 more)
tests/core/: test_auth.py  test_security.py
tests/integration/: test_company_field_integration.py
(+163 files in other folders)
