[project]
name = "resume-editor"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "resume-writer",
]

[dependency-groups]
dev = [
    "aider-chat>=0.85.5",
]

[tool.uv.sources]
resume-writer = { path = "../resume_writer", editable = true }
