[project]
name = "resume-editor"
version = "0.24.3"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.16.4",
    "bcrypt>=4.3.0",
    "cryptography>=45.0.6",
    "fastapi>=0.116.1",
    "langchain-openai>=0.3.29",
    "passlib>=1.7.4",
    "psycopg2-binary>=2.9.10",
    "pydantic-settings>=2.10.1",
    "pydantic[email]>=2.11.7",
    "python-docx>=1.2.0",
    "python-dotenv>=1.1.1",
    "python-jose[cryptography]>=3.5.0",
    "python-multipart>=0.0.20",
    "resume-writer",
    "sqlalchemy>=2.0.42",
    "uvicorn>=0.35.0",
]

[dependency-groups]
dev = [
    "aider-chat>=0.85.5",
    "bandit[baseline,toml]>=1.8.6",
    "beautifulsoup4>=4.13.4",
    "coverage>=7.10.3",
    "pytest>=8.4.1",
    "pytest-asyncio>=1.1.0",
    "pytest-cov>=6.2.1",
    "ruff>=0.12.8",
]

[tool.pytest.ini_options]
pythonpath = [".", "resume_editor", "./tests", "../resume_writer"]
addopts = "-rx"
log_cli_level = "DEBUG"

[tool.uv.sources]
resume-writer = { git = "https://github.com/mpaguilar/resume_writer.git" }
