[project]
name = "resume-editor"
version = "0.99.1"
description = "Edits and refines resumes"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.16.4",
    "bcrypt>=4.3.0",
    "click>=8.2.1",
    "cryptography>=45.0.6",
    "fastapi>=0.119.0",
    "langchain-openai>=0.3.29",
    "passlib>=1.7.4",
    "pendulum>=3.2.0",
    "psycopg2-binary>=2.9.10",
    "pydantic-core<2.39",
    "pydantic-settings>=2.10.1",
    "pydantic[email]>=2.11.7",
    "pyjwt>=2.10.1",
    "python-docx>=1.2.0",
    "python-dotenv>=1.1.1",
    "python-jose[cryptography]>=3.5.0",
    "python-multipart>=0.0.20",
    "resume-writer",
    "sqlalchemy>=2.0.42",
    "starlette>=0.47.2",
    "typing-extensions>=4.14.1",
    "tzdata>=2025.2",
    "uvicorn>=0.35.0",
]

[dependency-groups]
dev = [
    "aider-chat>=0.85.5",
    "bandit[baseline,toml]>=1.8.6",
    "beautifulsoup4>=4.13.4",
    "coverage>=7.10.3",
    "pytest>=8.4.1",
    "pytest-asyncio>=1.1.0",
    "pytest-cov>=6.2.1",
    "ruff>=0.12.8",
]

[tool.pytest.ini_options]
pythonpath = [".", "resume_editor", "./tests", "../resume_writer"]
addopts = "-rx --asyncio-mode=auto"
log_cli_level = "DEBUG"

[tool.uv.sources]
resume-writer = { git = "https://github.com/mpaguilar/resume_writer.git", rev = "dcac892" }

[tool.ruff]
include = ["resume_editor/**/*.py"]
exclude = ["temporal-samples-python"]

[tool.ruff.lint]
select = [
    "A002",   # Argument shadows python built-in
    "ANN201", # Missing return type annotation
    "ANN001", # Missing type annotation for argument
    "ARG001", # Unused function argument
    "ARG002", # Unused method argument
    "F841",   # Unused local variable
    "RUF006", # Store reference to asyncio.create_task return
    "TC002",  # Move third-party import into type-checking block
    "FAST",   # FastAPI-specific errors
    "D417",   # Missing argument description in docstring
    "C",      # McCabe complexity check
    "PLR0913" # Too many arguments
]

[tool.ruff.lint.per-file-ignores]
"**/tests/**/*" = ["ANN", "D", "I", "DTZ", "COM812", "PERF401", "PLC0415", "ARG001", "PLR0913", "INP001", "E501"]

[tool.ruff.lint.mccabe]
max-complexity = 5
